testdata/de/dm/intellij/liferay/language/groovy/LiferayGroovyDeprecationInspectionTest/myimport.groovy
<warning descr="Unused import"><warning descr="User Operation and Importer/Exporter Classes and Utilities Moved or Removed. (see LPS-63205)">import <error descr="Cannot resolve symbol 'com'">com</error>.<error descr="Cannot resolve symbol 'liferay'">liferay</error>.<error descr="Cannot resolve symbol 'portal'">portal</error>.<error descr="Cannot resolve symbol 'kernel'">kernel</error>.<error descr="Cannot resolve symbol 'security'">security</error>.<error descr="Cannot resolve symbol 'exportimport'">exportimport</error>.<error descr="Cannot resolve symbol 'UserExporterUtil'">UserExporterUtil</error></warning></warning>
